Imported colour scheme to kitty, .zshrc

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,9 @@ font_size 10
 disable_ligatures always
 
 # Cursors
-cursor #808080
-cursor_shape beam
+shell_integration no-cursor
+cursor #ffe6ff
+cursor_shape underline
 cursor_underline_thickness 2
 cursor_blink_interval -1
 cursor_stop_blinking_after 15
@@ -58,13 +59,37 @@ tab_fade 0.25 0.5 0.75 1
 tab_title_template "{num_windows} window{'s' if num_windows > 1 else ''} opened"
 
 # Color scheme
-foreground              #FFFFFF
-background              #000000
-selection_foreground    #000000
-selection_background    #3a3a3a
-url_color		#ADD8E6
+foreground              #ffe6ff
+background              #0b0a0d
+selection_foreground    #161514
+selection_background    #ff9eff
+url_color		#788dff
+# Black
+color0	#161514
+color8	#161514
+# Red
+color1	#ff6e6e
+color9	#ff6e6e
+# Green
+color2	#73ff84
+color10	#73ff84
+# Yellow
+color3	#fff398
+color11	#fff398
+# Blue
+color4	#788dff
+color12 #788dff
+# Magenta
+color5	#ff9eff
+color13	#ff9eff
+# Cyan
+color6	#6eebff
+color14	#6eebff
+# White
+color7	#ffe6ff
+color15	#ffe6ff
 
-background_opacity 0.75
+background_opacity 1
 background_blur 1
 
 # Advanced
