Edited river + waybar configs (again)

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,19 +1,27 @@
 {
-  "height": 26,
-  "reload_style_on_change": true,
-  "modules-left": [
-  "river/tags"
-  ],
-  "modules-center": [
-  ],
-  "modules-right": [
-    "custom/clock"
-  ],
-  "custom/clock": {
-    "exec": "date +'%a %I:%M'",
-    "interval": 60,
-    "tooltip": false,
-    "on-click": "month",
-    "on-click-right": "events"
-  },
+	"height": 20,
+	"spacing": 4,
+	"reload_style_on_change": true,
+	"modules-left": [
+  	"river/tags"
+	],
+	"modules-center": [
+	],
+	"modules-right": [
+	"cpu",
+	"custom/clock",
+	],
+	"cpu": {
+		"interval": 10,
+		"format": "CPU: {usage}%",
+		"max-length": 10,
+		"on-click": "kitty btop",
+	},
+	"custom/clock": {
+		"exec": "date +'%a %I:%M'",
+		"interval": 60,
+		"tooltip": false,
+		"on-click": "month",
+		"on-click-right": "events"
+	},
 }
