--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ $menu = fuzzel
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 
-exec-once = kanshi & kando & waybar
+exec-once = kanshi & waybar
 
 
 #############################
@@ -179,6 +179,7 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, F, togglefloating,
+bind = $mainMod SHIFT, F, fullscreen,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
@@ -190,10 +191,10 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
 # Move windows with mainMod + SHIFT + HJKL
-bind = SUPER SHIFT, H, movewindow, l
-bind = SUPER SHIFT, L, movewindow, r
-bind = SUPER SHIFT, K, movewindow, u
-bind = SUPER SHIFT, J, movewindow, d 
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d 
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -220,10 +221,10 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Resize windows with mainMod + Alt + HJKL
-bind = SUPER ALT, H, resizeactive, -10 0
-bind = SUPER ALT, L, resizeactive, 10 0
-bind = SUPER ALT, K, resizeactive, 0 -10
-bind = SUPER ALT, J, resizeactive, 0 10
+bind = $mainMod ALT, H, resizeactive, -10 0
+bind = $mainMod ALT, L, resizeactive, 10 0
+bind = $mainMod ALT, K, resizeactive, 0 -10
+bind = $mainMod ALT, J, resizeactive, 0 10
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -243,11 +244,20 @@ bind = , PRINT, exec, hyprshot -m region
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# workspace=1,monitor:DP-1
+# workspace=2,monitor:DP-1
+# workspace=3,monitor:DP-1
+# workspace=4,monitor:DP-1
+# workspace=5,monitor:DP-1
+# 
+# workspace=6,monitor:DP-2
+# workspace=7,monitor:DP-2
+# workspace=8,monitor:DP-2
+# workspace=9,monitor:DP-2
+# workspace=10,monitor:DP-2
+# 
+# workspace=11,monitor:HDMI-A-1
+# workspace=12,monitor:HDMI-A-2
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
