the big one^2(tm)

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,6 +5,8 @@ italic_font      auto
 bold_italic_font auto
 font_size 10
 disable_ligatures always
+modify_font underline_position 2
+modify_font underline_thickness 200%
 
 # Cursors
 shell_integration no-cursor
