switched to hyprland because river was being weird. ill switch back later

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ env = HYPRSHOT_DIR,/home/qaffe/Pictures/Screenshots
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 4
 
@@ -144,7 +144,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -243,20 +243,18 @@ bind = , PRINT, exec, hyprshot -m region
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# workspace=1,monitor:DP-1
-# workspace=2,monitor:DP-1
-# workspace=3,monitor:DP-1
-# workspace=4,monitor:DP-1
-# workspace=5,monitor:DP-1
-# 
-# workspace=6,monitor:DP-2
-# workspace=7,monitor:DP-2
-# workspace=8,monitor:DP-2
-# workspace=9,monitor:DP-2
-# workspace=10,monitor:DP-2
-# 
-# workspace=11,monitor:HDMI-A-1
-# workspace=12,monitor:HDMI-A-2
+workspace=1,monitor:DP-1
+workspace=2,monitor:DP-1
+workspace=3,monitor:DP-1
+workspace=4,monitor:DP-1
+
+workspace=5,monitor:DP-2
+workspace=6,monitor:DP-2
+workspace=7,monitor:DP-2
+workspace=8,monitor:DP-2
+
+workspace=9,monitor:HDMI-A-1
+workspace=10,monitor:HDMI-A-2
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
