--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -237,6 +237,11 @@ bind = $mainMod SHIFT, PRINT, exec, hyprshot -m output
 # Screenshot a region
 bind = , PRINT, exec, hyprshot -m region
 
+# Volume control
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
