--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -262,8 +262,33 @@ workspace=8,monitor:DP-2
 workspace=9,monitor:HDMI-A-1
 workspace=10,monitor:HDMI-A-2
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+windowrule {
+	# Ignore maximize requests from apps. You'll probably like this.
+	name = suppress-maximize-events
+	match:class = .*
 
-# Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+	suppress_event = maximize
+}
+
+windowrule {
+	# Fix some dragging issues with XWayland
+	name = fix-wayland-drags
+	match:class = ^$
+	match:title = ^$
+	match:xwayland = true
+	match:float = true
+	match:fullscreen = false
+	match:pin = false
+
+	no_focus = true
+}
+
+# Hyprland-run windowrule
+windowrule {
+	name = move-hyprland-run
+
+	match:class = hyprland-run
+
+	move = 20 monitor_h-120
+	float = yes
+}
