fixes and additions

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ $menu = fuzzel
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 
-exec-once = kanshi & waybar
+exec-once = kanshi & waybar & mako & systemctl --user start hyprpolkitagent
 
 
 #############################
