--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -14,6 +14,7 @@
 	"niri/window",
 	],
 	"modules-right": [
+	"tray",
 	"cpu",
 	"memory",
 	"custom/clock",
@@ -59,6 +60,10 @@
 	},
 	"niri/window": {
 		"max-length": 55,
+	},
+	"tray": {
+		"icon-size": 21,
+		"spacing": 10,
 	},
 	"cpu": {
 		"interval": 10,
